<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="@dimen/title_layout_width"
        android:layout_height="wrap_content"
        android:paddingBottom="150dp"
        android:paddingTop="150dp"
        android:background="@color/lime_500"
        android:text="@string/text_view_title"
        android:textSize="@dimen/text_dimension"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/counter_result"/>

    <TextView
        android:id="@+id/counter_result"
        android:layout_width="@dimen/counter_result_width"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/counter_result"
        android:textAlignment="center"
        android:textSize="@dimen/text_dimension"
        app:layout_constraintBottom_toTopOf="@id/edit_text_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/edit_text_user"
        android:layout_width="@dimen/edit_text_layout_width"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_height="@dimen/edit_text_layout_height"
        android:hint="@string/edit_text_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/counter_result"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/increase_button"
        android:layout_width="@dimen/button_layout_width"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:text="@string/increase_button_name"
        app:layout_constraintTop_toBottomOf="@id/edit_text_user"
        app:layout_constraintBottom_toTopOf="@id/decrease_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/decrease_button"
        android:layout_width="@dimen/button_layout_width"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:text="@string/decrease_button_name"
        app:layout_constraintTop_toBottomOf="@id/increase_button"
        app:layout_constraintBottom_toTopOf="@id/reset_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="@dimen/button_layout_width"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:text="@string/reset_button_name"
        app:layout_constraintTop_toBottomOf="@id/decrease_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>